--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:59:38 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 5:00:21 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -145,7 +145,7 @@ body {
       <td>Scottie Scheffler -11
 -3 thru 8</td>
       <td>Cameron Smith(W) -5
--3 thru 11</td>
+-3 thru 12</td>
       <td>Corey Conners -3
 -2 thru 11</td>
       <td>Will Zalatoris -1
@@ -156,28 +156,12 @@ E thru 12</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Stan and Ollie Garch</td>
-      <td class="bigbold">-19</td>
-      <td>Scottie Scheffler -11
--3 thru 8</td>
-      <td>Shane Lowry -4
--1 thru 9</td>
-      <td>Corey Conners -3
--2 thru 11</td>
-      <td>Justin Thomas(W) -1
-E thru 13</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Doug Muir</td>
       <td class="bigbold">-18</td>
       <td>Scottie Scheffler(W) -11
 -3 thru 8</td>
       <td>Cameron Smith -5
--3 thru 11</td>
+-3 thru 12</td>
       <td>Will Zalatoris -1
 E thru 12</td>
       <td>Hideki Matsuyama +1
@@ -188,12 +172,28 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Stan and Ollie Garch</td>
+      <td class="bigbold">-18</td>
+      <td>Scottie Scheffler -11
+-3 thru 8</td>
+      <td>Shane Lowry -4
+-1 thru 9</td>
+      <td>Corey Conners -3
+-2 thru 11</td>
+      <td>Justin Thomas(W) E
++1 thru 14</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Mark MacKave</td>
       <td class="bigbold">-18</td>
       <td>Scottie Scheffler -11
 -3 thru 8</td>
       <td>Cameron Smith -5
--3 thru 11</td>
+-3 thru 12</td>
       <td>Corey Conners -3
 -2 thru 11</td>
       <td>Will Zalatoris -1
@@ -204,28 +204,12 @@ E thru 12</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-17</td>
-      <td>Scottie Scheffler -11
--3 thru 8</td>
-      <td>Shane Lowry -4
--1 thru 9</td>
-      <td>Justin Thomas(W) -1
-E thru 13</td>
-      <td>Will Zalatoris -1
-E thru 12</td>
-      <td class="greyout leftborder">Tony Finau +4
-+2 (F)</td>
-      <td class="greyout">Patrick Cantlay +5
-+4 thru 15</td>
-    </tr>
-    <tr>
       <td class="bigbold">Team Steve</td>
       <td class="bigbold">-17</td>
       <td>Scottie Scheffler -11
 -3 thru 8</td>
       <td>Cameron Smith(W) -5
--3 thru 11</td>
+-3 thru 12</td>
       <td>Shane Lowry -4
 -1 thru 9</td>
       <td>Viktor Hovland +3
@@ -236,12 +220,28 @@ E thru 12</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Jon Hosegood</td>
+      <td class="bigbold">-16</td>
+      <td>Scottie Scheffler -11
+-3 thru 8</td>
+      <td>Shane Lowry -4
+-1 thru 9</td>
+      <td>Will Zalatoris -1
+E thru 12</td>
+      <td>Justin Thomas(W) E
++1 thru 14</td>
+      <td class="greyout leftborder">Tony Finau +4
++2 (F)</td>
+      <td class="greyout">Patrick Cantlay +5
++4 thru 15</td>
+    </tr>
+    <tr>
       <td class="bigbold">Walk 2</td>
       <td class="bigbold">-16</td>
       <td>Scottie Scheffler -11
 -3 thru 8</td>
       <td>Cameron Smith -5
--3 thru 11</td>
+-3 thru 12</td>
       <td>Corey Conners -3
 -2 thru 11</td>
       <td>Viktor Hovland(W) +3
@@ -257,7 +257,7 @@ Missed Cut</td>
       <td>Scottie Scheffler -11
 -3 thru 8</td>
       <td>Cameron Smith(W) -5
--3 thru 11</td>
+-3 thru 12</td>
       <td>Corey Conners -3
 -2 thru 11</td>
       <td>Talor Gooch +3
@@ -277,33 +277,17 @@ Missed Cut</td>
       <td>Will Zalatoris -1
 E thru 12</td>
       <td>Webb Simpson +1
-E thru 15</td>
+E thru 16</td>
       <td class="greyout leftborder">Jon Rahm(W) +7
 +5 (F)</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-11</td>
-      <td>Cameron Smith -5
--3 thru 11</td>
-      <td>Shane Lowry -4
--1 thru 9</td>
-      <td>Justin Thomas(W) -1
-E thru 13</td>
-      <td>Will Zalatoris -1
-E thru 12</td>
-      <td class="greyout leftborder">Matthew Fitzpatrick +3
-+3 thru 14</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">The Resort</td>
       <td class="bigbold">-11</td>
       <td>Cameron Smith(W) -5
--3 thru 11</td>
+-3 thru 12</td>
       <td>Shane Lowry -4
 -1 thru 9</td>
       <td>Corey Conners -3
@@ -319,7 +303,7 @@ Missed Cut</td>
       <td class="bigbold">Tom Davis</td>
       <td class="bigbold">-11</td>
       <td>Cameron Smith -5
--3 thru 11</td>
+-3 thru 12</td>
       <td>Shane Lowry -4
 -1 thru 9</td>
       <td>Corey Conners -3
@@ -364,12 +348,44 @@ Missed Cut</td>
 +5 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Santorini Sunsets</td>
+      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">-10</td>
+      <td>Cameron Smith -5
+-3 thru 12</td>
+      <td>Shane Lowry -4
+-1 thru 9</td>
+      <td>Will Zalatoris -1
+E thru 12</td>
+      <td>Justin Thomas(W) E
++1 thru 14</td>
+      <td class="greyout leftborder">Matthew Fitzpatrick +3
++3 thru 14</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">The Dub</td>
       <td class="bigbold">-8</td>
       <td>Scottie Scheffler -11
 -3 thru 8</td>
-      <td>Justin Thomas(W) -1
-E thru 13</td>
+      <td>Cameron Smith(W) -5
+-3 thru 12</td>
+      <td>Matthew Fitzpatrick +3
++3 thru 14</td>
+      <td>Patrick Cantlay +5
++4 thru 15</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Santorini Sunsets</td>
+      <td class="bigbold">-7</td>
+      <td>Scottie Scheffler -11
+-3 thru 8</td>
+      <td>Justin Thomas(W) E
++1 thru 14</td>
       <td>Rory McIlroy +1
 -1 (F)</td>
       <td>Viktor Hovland +3
@@ -381,13 +397,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Bill Hunter</td>
-      <td class="bigbold">-8</td>
+      <td class="bigbold">-7</td>
       <td>Cameron Smith(W) -5
--3 thru 11</td>
+-3 thru 12</td>
       <td>Corey Conners -3
 -2 thru 11</td>
-      <td>Justin Thomas -1
-E thru 13</td>
+      <td>Justin Thomas E
++1 thru 14</td>
       <td>Hideki Matsuyama +1
 +4 thru 10</td>
       <td class="greyout leftborder">Marc Leishman +3
@@ -396,42 +412,10 @@ E thru 13</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">The Dub</td>
-      <td class="bigbold">-8</td>
-      <td>Scottie Scheffler -11
--3 thru 8</td>
-      <td>Cameron Smith(W) -5
--3 thru 11</td>
-      <td>Matthew Fitzpatrick +3
-+3 thru 14</td>
-      <td>Patrick Cantlay +5
-+4 thru 15</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Baggy Pants</td>
-      <td class="bigbold">-7</td>
-      <td>Cameron Smith -5
--3 thru 11</td>
-      <td>Shane Lowry -4
--1 thru 9</td>
-      <td>Justin Thomas(W) -1
-E thru 13</td>
-      <td>Viktor Hovland +3
--1 (F)</td>
-      <td class="greyout leftborder">Patrick Cantlay +5
-+4 thru 15</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Hadrian&#39;s Wall</td>
       <td class="bigbold">-6</td>
       <td>Cameron Smith -5
--3 thru 11</td>
+-3 thru 12</td>
       <td>Corey Conners -3
 -2 thru 11</td>
       <td>Will Zalatoris -1
@@ -460,14 +444,30 @@ E thru 12</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">Baggy Pants</td>
       <td class="bigbold">-6</td>
+      <td>Cameron Smith -5
+-3 thru 12</td>
+      <td>Shane Lowry -4
+-1 thru 9</td>
+      <td>Justin Thomas(W) E
++1 thru 14</td>
+      <td>Viktor Hovland +3
+-1 (F)</td>
+      <td class="greyout leftborder">Patrick Cantlay +5
++4 thru 15</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">-5</td>
       <td>Cameron Smith(W) -5
--3 thru 11</td>
+-3 thru 12</td>
       <td>Corey Conners -3
 -2 thru 11</td>
-      <td>Justin Thomas -1
-E thru 13</td>
+      <td>Justin Thomas E
++1 thru 14</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td class="greyout leftborder">Xander Schauffele
@@ -476,26 +476,10 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Jabby</td>
-      <td class="bigbold">-4</td>
-      <td>Corey Conners -3
--2 thru 11</td>
-      <td>Justin Thomas(W) -1
-E thru 13</td>
-      <td>Will Zalatoris -1
-E thru 12</td>
-      <td>Rory McIlroy +1
--1 (F)</td>
-      <td class="greyout leftborder">Jon Rahm +7
-+5 (F)</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Ron Harrington</td>
       <td class="bigbold">-4</td>
       <td>Cameron Smith -5
--3 thru 11</td>
+-3 thru 12</td>
       <td>Corey Conners -3
 -2 thru 11</td>
       <td>Hideki Matsuyama +1
@@ -508,28 +492,12 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Jack Fleck</td>
-      <td class="bigbold">-4</td>
-      <td>Cameron Smith -5
--3 thru 11</td>
-      <td>Justin Thomas -1
-E thru 13</td>
-      <td>Rory McIlroy(W) +1
--1 (F)</td>
-      <td>Hideki Matsuyama +1
-+4 thru 10</td>
-      <td class="greyout leftborder">Tiger Woods +4
-+3 thru 16</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Uphill into the Wind</td>
       <td class="bigbold">-3</td>
       <td>Scottie Scheffler(W) -11
 -3 thru 8</td>
       <td>Cameron Smith -5
--3 thru 11</td>
+-3 thru 12</td>
       <td>Patrick Cantlay +5
 +4 thru 15</td>
       <td>Billy Horschel +10
@@ -540,10 +508,42 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Jabby</td>
+      <td class="bigbold">-3</td>
+      <td>Corey Conners -3
+-2 thru 11</td>
+      <td>Will Zalatoris -1
+E thru 12</td>
+      <td>Justin Thomas(W) E
++1 thru 14</td>
+      <td>Rory McIlroy +1
+-1 (F)</td>
+      <td class="greyout leftborder">Jon Rahm +7
++5 (F)</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jack Fleck</td>
+      <td class="bigbold">-3</td>
+      <td>Cameron Smith -5
+-3 thru 12</td>
+      <td>Justin Thomas E
++1 thru 14</td>
+      <td>Rory McIlroy(W) +1
+-1 (F)</td>
+      <td>Hideki Matsuyama +1
++4 thru 10</td>
+      <td class="greyout leftborder">Tiger Woods +4
++3 thru 16</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Santorini Sunrises</td>
       <td class="bigbold">-2</td>
       <td>Cameron Smith -5
--3 thru 11</td>
+-3 thru 12</td>
       <td>Corey Conners(W) -3
 -2 thru 11</td>
       <td>Will Zalatoris -1
@@ -573,13 +573,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">New Lu</td>
-      <td class="bigbold">-2</td>
+      <td class="bigbold">-1</td>
       <td>Cameron Smith -5
--3 thru 11</td>
-      <td>Justin Thomas(W) -1
-E thru 13</td>
+-3 thru 12</td>
       <td>Will Zalatoris -1
 E thru 12</td>
+      <td>Justin Thomas(W) E
++1 thru 14</td>
       <td>Patrick Cantlay +5
 +4 thru 15</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -589,13 +589,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Ez Game Ez Life</td>
-      <td class="bigbold">-2</td>
+      <td class="bigbold">-1</td>
       <td>Collin Morikawa -1
 E thru 12</td>
-      <td>Justin Thomas -1
-E thru 13</td>
       <td>Will Zalatoris -1
 E thru 12</td>
+      <td>Justin Thomas E
++1 thru 14</td>
       <td>Rory McIlroy +1
 -1 (F)</td>
       <td class="greyout leftborder">Viktor Hovland +3
@@ -636,26 +636,10 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Downhill Down Wind</td>
-      <td class="bigbold">2</td>
-      <td>Collin Morikawa(W) -1
-E thru 12</td>
-      <td>Justin Thomas -1
-E thru 13</td>
-      <td>Rory McIlroy +1
--1 (F)</td>
-      <td>Viktor Hovland +3
--1 (F)</td>
-      <td class="greyout leftborder">Tiger Woods +4
-+3 thru 16</td>
-      <td class="greyout">Gary Woodland
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Don Shaw</td>
       <td class="bigbold">3</td>
       <td>Cameron Smith -5
--3 thru 11</td>
+-3 thru 12</td>
       <td>Corey Conners -3
 -2 thru 11</td>
       <td>Tiger Woods +4
@@ -668,19 +652,19 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Brian McDonald</td>
-      <td class="bigbold">4</td>
-      <td>Corey Conners -3
--2 thru 11</td>
-      <td>Justin Thomas -1
-E thru 13</td>
+      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">3</td>
+      <td>Collin Morikawa(W) -1
+E thru 12</td>
+      <td>Justin Thomas E
++1 thru 14</td>
       <td>Rory McIlroy +1
 -1 (F)</td>
-      <td>Jon Rahm(W) +7
-+5 (F)</td>
-      <td class="greyout leftborder">Xander Schauffele
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
+      <td>Viktor Hovland +3
+-1 (F)</td>
+      <td class="greyout leftborder">Tiger Woods +4
++3 thru 16</td>
+      <td class="greyout">Gary Woodland
 Missed Cut</td>
     </tr>
     <tr>
@@ -695,6 +679,22 @@ Missed Cut</td>
       <td>Tony Finau +4
 +2 (F)</td>
       <td class="greyout leftborder">Louis Oosthuizen
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Brian McDonald</td>
+      <td class="bigbold">5</td>
+      <td>Corey Conners -3
+-2 thru 11</td>
+      <td>Justin Thomas E
++1 thru 14</td>
+      <td>Rory McIlroy +1
+-1 (F)</td>
+      <td>Jon Rahm(W) +7
++5 (F)</td>
+      <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
@@ -719,7 +719,7 @@ Missed Cut</td>
       <td class="bigbold">Glitter Girl</td>
       <td class="bigbold">6</td>
       <td>Cameron Smith -5
--3 thru 11</td>
+-3 thru 12</td>
       <td>Rory McIlroy +1
 -1 (F)</td>
       <td>Viktor Hovland +3
@@ -728,38 +728,6 @@ Missed Cut</td>
 +5 (F)</td>
       <td class="greyout leftborder">Bubba Watson +7
 +5 thru 17</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">8</td>
-      <td>Justin Thomas(W) -1
-E thru 13</td>
-      <td>Will Zalatoris -1
-E thru 12</td>
-      <td>Viktor Hovland +3
--1 (F)</td>
-      <td>Jon Rahm +7
-+5 (F)</td>
-      <td class="greyout leftborder">Sam Burns
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Kash Ahmad</td>
-      <td class="bigbold">8</td>
-      <td>Justin Thomas -1
-E thru 13</td>
-      <td>Will Zalatoris -1
-E thru 12</td>
-      <td>Viktor Hovland +3
--1 (F)</td>
-      <td>Jon Rahm(W) +7
-+5 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -780,6 +748,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Glen Wilson</td>
+      <td class="bigbold">9</td>
+      <td>Will Zalatoris -1
+E thru 12</td>
+      <td>Justin Thomas(W) E
++1 thru 14</td>
+      <td>Viktor Hovland +3
+-1 (F)</td>
+      <td>Jon Rahm +7
++5 (F)</td>
+      <td class="greyout leftborder">Sam Burns
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">9</td>
       <td>Corey Conners(W) -3
@@ -792,6 +776,22 @@ E thru 12</td>
 +5 (F)</td>
       <td class="greyout leftborder">Jon Rahm +7
 +5 (F)</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Kash Ahmad</td>
+      <td class="bigbold">9</td>
+      <td>Will Zalatoris -1
+E thru 12</td>
+      <td>Justin Thomas E
++1 thru 14</td>
+      <td>Viktor Hovland +3
+-1 (F)</td>
+      <td>Jon Rahm(W) +7
++5 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -828,38 +828,6 @@ Out With Injury</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Roy Jeffrey A</td>
-      <td class="bigbold">12</td>
-      <td>Justin Thomas -1
-E thru 13</td>
-      <td>Hideki Matsuyama +1
-+4 thru 10</td>
-      <td>Patrick Cantlay +5
-+4 thru 15</td>
-      <td>Jon Rahm(W) +7
-+5 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Hasbulla</td>
-      <td class="bigbold">12</td>
-      <td>Justin Thomas -1
-E thru 13</td>
-      <td>Rory McIlroy +1
--1 (F)</td>
-      <td>Patrick Cantlay(W) +5
-+4 thru 15</td>
-      <td>Jon Rahm +7
-+5 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Jeff Turnham</td>
       <td class="bigbold">13</td>
       <td>Collin Morikawa -1
@@ -876,10 +844,42 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Roy Jeffrey A</td>
+      <td class="bigbold">13</td>
+      <td>Justin Thomas E
++1 thru 14</td>
+      <td>Hideki Matsuyama +1
++4 thru 10</td>
+      <td>Patrick Cantlay +5
++4 thru 15</td>
+      <td>Jon Rahm(W) +7
++5 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Hasbulla</td>
+      <td class="bigbold">13</td>
+      <td>Justin Thomas E
++1 thru 14</td>
+      <td>Rory McIlroy +1
+-1 (F)</td>
+      <td>Patrick Cantlay(W) +5
++4 thru 15</td>
+      <td>Jon Rahm +7
++5 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">14</td>
-      <td>Justin Thomas(W) -1
-E thru 13</td>
+      <td class="bigbold">15</td>
+      <td>Justin Thomas(W) E
++1 thru 14</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td>Patrick Cantlay +5
@@ -965,8 +965,8 @@ Missed Cut</td>
     <tr>
       <td class="bigbold greyout">NewCastle Magpies</td>
       <td class="bigbold greyout">-</td>
-      <td class="greyout">Justin Thomas(W)</td>
       <td class="greyout">Collin Morikawa</td>
+      <td class="greyout">Justin Thomas(W)</td>
       <td class="greyout">Patrick Cantlay</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
@@ -1044,8 +1044,8 @@ Missed Cut</td>
       <td class="bigbold greyout">Wylie</td>
       <td class="bigbold greyout">-</td>
       <td class="greyout">Scottie Scheffler</td>
-      <td class="greyout">Justin Thomas(W)</td>
       <td class="greyout">Will Zalatoris</td>
+      <td class="greyout">Justin Thomas(W)</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
       <td class="greyout leftborder">Louis Oosthuizen
