--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:59:38 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 5:00:21 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,15 +141,15 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-17</td>
+      <td class="bigbold">-16</td>
       <td>Scottie Scheffler -11
 -3 thru 8</td>
       <td>Shane Lowry -4
 -1 thru 9</td>
-      <td>Justin Thomas(W) -1
-E thru 13</td>
       <td>Will Zalatoris -1
 E thru 12</td>
+      <td>Justin Thomas(W) E
++1 thru 14</td>
       <td class="greyout leftborder">Tony Finau +4
 +2 (F)</td>
       <td class="greyout">Patrick Cantlay +5
@@ -173,15 +173,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-11</td>
+      <td class="bigbold">-10</td>
       <td>Cameron Smith -5
--3 thru 11</td>
+-3 thru 12</td>
       <td>Shane Lowry -4
 -1 thru 9</td>
-      <td>Justin Thomas(W) -1
-E thru 13</td>
       <td>Will Zalatoris -1
 E thru 12</td>
+      <td>Justin Thomas(W) E
++1 thru 14</td>
       <td class="greyout leftborder">Matthew Fitzpatrick +3
 +3 thru 14</td>
       <td class="greyout">Brooks Koepka
@@ -189,13 +189,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-6</td>
+      <td class="bigbold">-5</td>
       <td>Cameron Smith(W) -5
--3 thru 11</td>
+-3 thru 12</td>
       <td>Corey Conners -3
 -2 thru 11</td>
-      <td>Justin Thomas -1
-E thru 13</td>
+      <td>Justin Thomas E
++1 thru 14</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td class="greyout leftborder">Xander Schauffele
@@ -205,11 +205,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-4</td>
+      <td class="bigbold">-3</td>
       <td>Cameron Smith -5
--3 thru 11</td>
-      <td>Justin Thomas -1
-E thru 13</td>
+-3 thru 12</td>
+      <td>Justin Thomas E
++1 thru 14</td>
       <td>Tommy Fleetwood(W) +1
 -2 (F)</td>
       <td>Rory McIlroy +1
@@ -221,13 +221,13 @@ E thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
-      <td class="bigbold">-3</td>
+      <td class="bigbold">-2</td>
       <td>Shane Lowry -4
 -1 thru 9</td>
       <td>Corey Conners -3
 -2 thru 11</td>
-      <td>Justin Thomas(W) -1
-E thru 13</td>
+      <td>Justin Thomas(W) E
++1 thru 14</td>
       <td>Patrick Cantlay +5
 +4 thru 15</td>
       <td class="greyout leftborder">Jon Rahm +7
@@ -239,7 +239,7 @@ E thru 13</td>
       <td class="bigbold">John Nixon</td>
       <td class="bigbold">0</td>
       <td>Cameron Smith(W) -5
--3 thru 11</td>
+-3 thru 12</td>
       <td>Collin Morikawa -1
 E thru 12</td>
       <td>Rory McIlroy +1
@@ -253,11 +253,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">1</td>
-      <td>Justin Thomas -1
-E thru 13</td>
+      <td class="bigbold">2</td>
       <td>Collin Morikawa -1
 E thru 12</td>
+      <td>Justin Thomas E
++1 thru 14</td>
       <td>Sungjae Im E
 +3 thru 9</td>
       <td>Viktor Hovland(W) +3
@@ -269,13 +269,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">1</td>
-      <td>Justin Thomas(W) -1
-E thru 13</td>
+      <td class="bigbold">2</td>
       <td>Collin Morikawa -1
 E thru 12</td>
       <td>Will Zalatoris -1
 E thru 12</td>
+      <td>Justin Thomas(W) E
++1 thru 14</td>
       <td>Tony Finau +4
 +2 (F)</td>
       <td class="greyout leftborder">Daniel Berger +7
@@ -285,11 +285,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">6</td>
+      <td class="bigbold">7</td>
       <td>Corey Conners -3
 -2 thru 11</td>
-      <td>Justin Thomas -1
-E thru 13</td>
+      <td>Justin Thomas E
++1 thru 14</td>
       <td>Dustin Johnson +1
 +3 thru 11</td>
       <td>Russell Henley +7
